# PathTracer

./: .gitignore  Build_explanation.txt  Cargo.toml  README.md  generate_pdf.bat  link_models_zip.txt  models.bat  models.txt
RayTracer/: camera.cs  tracer.cl
SDL_FOR_WINDOWS/: Explanation.txt
assets/: reference.png.xmp
src/: bvh.rs  camera.rs  main.rs  material.rs  mesh.rs  path_tracer.rs  ray.rs  scene.rs
src/primitive/: aabb.rs  mod.rs  sphere.rs  triangle.rs
